--- a/setup/environment.yml
+++ b/setup/environment.yml
@@ -31,7 +31,7 @@ dependencies:
   - injective-py==1.11.*
   - eth-account>=0.13.0
   - msgpack-python
-  - numpy>=1.25.0,<2
+  - "numpy>=1.25.0,<2"
   - objgraph
   - pandas>=2.0.3
   - pandas-ta>=0.3.14b
